Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- fix: impossible to create or upgrade a site using CPSBoxes
- fix : update Zope-2.7.x -> Zope-2.8.x
- fix : bug in getImgTag()
- BBB : CPSDefault.utils.getHtmlBody
- #852 : make logged_in more customizable
- Fix for 3.2 migration
- #914 : Existing instances of 'News' document type are broken.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-