@@ -13,6 +13,7 @@ Bug fixes:
 - #852 : make logged_in more customizable
 - Fix for 3.2 migration
 - #914 : Existing instances of 'News' document type are broken.
+-  #685 : when publishing a content, a wrarning should be raised if no section is chosen
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
